add account screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">botflow</string>
     <integer name="com_vk_sdk_AppId">7632134</integer>
+    <string name="bot_list">Bots</string>
+    <string name="account">Account</string>
 </resources>
