--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="account">Account</string>
     <string name="tariff">Plan</string>
     <string name="email">Email</string>
+    <string name="vk_auth">Войти с VK</string>
+    <string name="google_auth">Войти с Google</string>
+    <string name="auth">Войдите, чтобы продолжить</string>
 </resources>
