--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="vk_auth">Войти с VK</string>
     <string name="google_auth">Войти с Google</string>
     <string name="auth">Войдите, чтобы продолжить</string>
+    <string name="bot_name">Enter bot name</string>
 </resources>
